# tapet

./: .gitignore  README.md  com.github.kicsyromy.tapet.yml  meson.build  uncrustify.cfg
data/: meson.build  tapet.appdata.xml.in  tapet.desktop.in  tapet.gschema.xml
data/icons/: meson.build  tapet-icon-32.fla  tapet-icon-symbolic.fla  tapet-icon.fla
flatpak/: com.github.kicsyromy.tapet.yml  dconf-override.patch
po/: LINGUAS  POTFILES  com.github.kicsyromy.tapet.pot  ro.po  ro_RO.po
src/: Application.vala  BackgroundChangeHandler.vala  BasicTimer.vala  Content.vala  Error.vala  HeaderBar.vala  ImageRefreshHandler.vala  MainWindow.vala  SettingsDialog.vala  Strings.vala  SystemSettings.vala  Thumbnail.vala  Utilities.vala  extern_functions.c  meson.build  native.c
src/image_providers/: BingImageProvider.vala
src/providers/: BingImageProvider.vala  ImageProvider.vala
